--- a/src/layouts/index.css
+++ b/src/layouts/index.css
@@ -1,12 +1,16 @@
+@import url('./css-reset.css');
 @import url('https://fonts.googleapis.com/css?family=Lato:100i,300,300i,400,700');
+
+html {
+  font-size: 62.5%;
+}
 
 body {
   background-color: #262739;
   font-family: -apple-system, BlinkMacSystemFont, 
   'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 
   'Open Sans', 'Helvetica Neue', sans-serif;
-  font-size: 62.5%;
-  line-height: 1.5rem;
+  /* line-height: 1.5rem; */
   margin: 0;
   -webkit-font-smoothing: antialiased;
   
@@ -18,3 +22,42 @@ a {
   font-weight: 600;
   text-decoration: none;
 }
+
+.hero--learnmore {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  
+
+}
+
+.hero--centerlogo {
+  background-image: url(../images/hero-name.png);
+  background-position: center;
+  background-size: cover;
+  height: 44.3rem;
+  width: 43.3rem;
+  margin: 0 auto;
+  padding: 0;
+}
+
+.herogroup {
+  color: #EEEEEE;
+  display: flex;
+  flex-direction: row;
+  font-family: 'Lato', sans-serif;
+  font-size: 4.8rem;
+  justify-content: space-evenly;
+  letter-spacing: .8rem;
+  max-width: 100%;
+  text-align: center;
+}
+
+.herogroup--toptext{
+  font-weight: 300;
+}
+.herogroup--bottomtext {
+  font-weight: 100;
+  font-style: italic;
+}
+
