--- a/src/layouts/index.css
+++ b/src/layouts/index.css
@@ -1,4 +1,5 @@
 @import url('./css-reset.css');
+@import url('./header.css');
 @import url('https://fonts.googleapis.com/css?family=Lato:100i,300,300i,400,700');
 
 html {
@@ -6,7 +7,7 @@ html {
 }
 
 body {
-  background-color: #262739;
+  background-color: #252638;
   font-family: -apple-system, BlinkMacSystemFont, 
   'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 
   'Open Sans', 'Helvetica Neue', sans-serif;
@@ -23,34 +24,66 @@ a {
   text-decoration: none;
 }
 
-.hero--learnmore {
+.hero {
+  position: relative;
+  display: flex;
+  width: 100%;
+}
+
+/* .hero--learnmore, a {
   display: flex;
   justify-content: center;
   text-align: center;
-  
+} */
 
-}
-
-.hero--centerlogo {
-  background-image: url(../images/hero-name.png);
-  background-position: center;
-  background-size: cover;
-  height: 44.3rem;
-  width: 43.3rem;
-  margin: 0 auto;
+.hero__centerlogo {
+  display: flex;
+  height: 56rem;
+  justify-content: center;
+  margin: 16.5rem auto 15rem auto;
   padding: 0;
+  opacity: 0;
+  width: 58rem;
+  animation: heroAnimation;
+  animation-duration: 3s;
+  animation-fill-mode: forwards;
+  animation-timing-function: cubic-bezier(0.2, 0.8, 0.2, 1);
 }
 
 .herogroup {
+  /* align-items: center; */
   color: #EEEEEE;
-  display: flex;
-  flex-direction: row;
+  /* display: flex;
+  flex-direction: row; */
+  /* display: grid;
+  grid-template-columns: repeat(3, auto); */
   font-family: 'Lato', sans-serif;
   font-size: 4.8rem;
-  justify-content: space-evenly;
+  /* justify-content: space-between; */
+  /* justify-items: center; */
   letter-spacing: .8rem;
-  max-width: 100%;
+  line-height: 5.8rem;
+  width: 100%;
   text-align: center;
+
+}
+
+.herogroup-columns {
+  z-index: -1;
+  align-items: center;
+  display: grid;
+  grid-template-columns: repeat(2, auto);
+  justify-items: center;
+  opacity: 0;
+  animation: heroAnimation 3.5s 0.6s forwards cubic-bezier(0.2, 0.8, 0.2, 1);
+}
+
+.herogroup-leftcolumn {
+  padding-right: 25rem;
+}
+
+.herogroup-rightcolumn {
+  padding-left: 25rem;
 }
 
 .herogroup--toptext{
@@ -61,3 +94,36 @@ a {
   font-style: italic;
 }
 
+.hero svg {
+  bottom: 0;
+  position: absolute;
+  left: 0;
+  opacity: 1;
+  z-index: 3;
+}
+
+@media (max-width: 640px) {
+  .hero__centerlogo {
+    height: 34rem;
+    width: 32rem;
+    margin: 12.5rem auto 6rem auto;
+  }
+
+  .herogroup {
+    /* padding: 10rem 20rem; */
+    font-size:   3.4rem;
+    grid-template-columns: repeat(1, auto);
+  }
+}
+
+@keyframes heroAnimation {
+  0% {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translateY(0px);
+  }
+}
