--- a/src/layouts/index.css
+++ b/src/layouts/index.css
@@ -30,18 +30,13 @@ a {
   width: 100%;
 }
 
-/* .hero--learnmore, a {
-  display: flex;
-  justify-content: center;
-  text-align: center;
-} */
-
 .hero__centerlogo {
   display: flex;
   height: 56rem;
   justify-content: center;
-  margin: 15rem auto 5rem auto;
+  margin: 0rem auto 5rem auto;
   padding: 0;
+  padding-top: 15rem;
   opacity: 0;
   width: 58rem;
   animation: heroAnimation;
@@ -51,16 +46,9 @@ a {
 }
 
 .herogroup {
-  /* align-items: center; */
   color: #EEEEEE;
-  /* display: flex;
-  flex-direction: row; */
-  /* display: grid;
-  grid-template-columns: repeat(3, auto); */
   font-family: 'Lato', sans-serif;
   font-size: 4.8rem;
-  /* justify-content: space-between; */
-  /* justify-items: center; */
   letter-spacing: .8rem;
   line-height: 5.8rem;
   width: 100%;
