--- a/src/layouts/index.css
+++ b/src/layouts/index.css
@@ -1,5 +1,7 @@
 @import url('./css-reset.css');
 @import url('./header.css');
+@import url('./about.css');
+@import url('./skills.css');
 @import url('https://fonts.googleapis.com/css?family=Lato:100i,300,300i,400,700');
 
 html {
@@ -7,7 +9,6 @@ html {
 }
 
 body {
-  background-color: #262739;
   font-family: -apple-system, BlinkMacSystemFont, 
   'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 
   'Open Sans', 'Helvetica Neue', sans-serif;
@@ -25,18 +26,19 @@ a {
 }
 
 .hero {
+  background-color: #262739;
+  background-size: cover;
   position: relative;
-  display: flex;
   width: 100%;
 }
 
 .hero__centerlogo {
   display: flex;
-  height: 56rem;
+  height: 55rem;
   justify-content: center;
-  margin: 0rem auto 5rem auto;
+  margin: 0 auto;
   padding: 0;
-  padding-top: 15rem;
+  padding-top: 20rem;
   opacity: 0;
   width: 58rem;
   animation: heroAnimation;
@@ -51,10 +53,11 @@ a {
   font-size: 4.8rem;
   letter-spacing: .8rem;
   line-height: 5.8rem;
+  margin-bottom: 5rem;
+  padding-bottom: 10rem;
   width: 100%;
   text-align: center;
   z-index: -1;
-
 }
 
 .herogroup-columns {
@@ -63,6 +66,7 @@ a {
   grid-template-columns: repeat(2, auto);
   justify-items: center;
   opacity: 0;
+  padding-top: 20rem;
   animation: heroAnimation 3.5s 0.6s forwards cubic-bezier(0.2, 0.8, 0.2, 1);
 }
 
@@ -87,7 +91,6 @@ a {
   position: absolute;
   left: 0;
   opacity: 1;
-  z-index: 1;
 }
 
 @media (max-width: 640px) {
