Updated skill bar images with svgs

--- a/src/layouts/index.css
+++ b/src/layouts/index.css
@@ -26,7 +26,7 @@ a {
 }
 
 .hero {
-  background-color: #262739;
+  background-color: #020B16;
   background-size: cover;
   position: relative;
   width: 100%;
