--- a/src/layouts/about.css
+++ b/src/layouts/about.css
@@ -3,7 +3,7 @@
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-column-gap: 3rem;
-  padding: 20rem 3rem 0 3rem;
+  padding: 38rem 3rem 0 3rem;
 }
 
 .about__leftcolumn {
@@ -27,7 +27,8 @@
   position: absolute;
   width: 6rem;
 }
-.about__leftcolumn h2 span {
+
+.about__leftcolumn h2 span:nth-of-type(2) {
   color: #8588df;
 }
 
