--- a/src/layouts/header.css
+++ b/src/layouts/header.css
@@ -10,7 +10,7 @@
 }
 
 .header__scrolled {
-  background-color: rgba(0, 0, 0, 0.7);
+  background-color: rgba(255,77,89,0.45);
   padding: 15px 0;
   backdrop-filter: blur(20px);
 }
