--- a/src/layouts/about.css
+++ b/src/layouts/about.css
@@ -1,15 +1,32 @@
-.about {
+.about-container {
   background-color: white;                         
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  grid-column-gap: 3rem;
-  padding: 38rem 3rem 0 3rem;
+  grid-column-gap: 5rem;
+  margin-top: 5rem;
+  padding: 0 3rem 0 3rem;
 }
 
 .about__leftcolumn {
   letter-spacing: 4px;
   padding-left: 5rem;
+  align-items: center;
 }
+
+/* .heading--left {
+  color: #072142;
+  display: flex;
+  font-family: 'Lato', sans-serif;
+  font-size: 6rem;
+  font-weight: 600;
+  justify-content: flex-start;
+  letter-spacing: .4rem;
+  padding-top: 18rem;
+  padding-right: 8rem;
+  left: 0;
+  top: 0;
+  text-transform: uppercase;
+} */
 
 .about__leftcolumn h2 {
   color: #14151f;
@@ -28,7 +45,7 @@
   width: 6rem;
 }
 
-.about__leftcolumn h2 span:nth-of-type(2) {
+.about__leftcolumn h2 span {
   color: #8588df;
 }
 
@@ -41,14 +58,46 @@
   padding-top: 2rem;
 }
 
+.about__leftcolumn img {
+  margin-top: 10rem;
+  height: 60rem;
+  box-shadow: 0px 10px 20px rgba(37, 38, 56, .5)
+}
+
 .about__rightcolumn {
+  padding-right: 5rem;
+  padding-top: 25rem;
+  display: flex;
+  align-content: center
+
+}
+
+.about__rightcolumn-topbar {
+  background: #DF724F;
+  content: "";
+  height: 3px;
+  justify-content: left;
+  position: absolute;
+  width: 30rem;
+}
+
+.about__rightcolumn-text {
   color: #ff4d5a;
   font-family: 'Lato', sans-serif;
   font-size: 2.2rem;
   font-weight: 400;
   letter-spacing: 2px;
   line-height: 1.3;
-  padding-right: 5rem;
-  padding-top: 30rem;
+  margin-top: 12rem;
+  margin-bottom: 10rem;
+}
 
+.about__rightcolumn-bottombar {
+  background: #DF724F;
+  bottom: 0;
+  content: "";
+  height: 3px;
+  right: 0;
+  position: absolute;
+  width: 30rem;
 }
